# HydroSOS

./: .gitignore  README.md  StatusCalc Excel.xlsx  StatusCalcV3.R  StatusCalcV3.py  changelog.md  csv_to_json.py  examplePlot.ipynb  forecast_csv_to_geotiff.py  forecast_csv_to_json.py  merge_hydrobasins.py  outlastnc_proc.py  requirements.txt  run_code.bat  status_csv_to_json.py  test.json  tests.ipynb
example_data/forecast_dir/: forecast_A_3.csv
example_data/input/: 12001.csv  12001_exceltest.csv  33035.csv  39001.csv  39001_exceltest.csv  44008.csv  44008_exceltest.csv
example_data/obs_dir/: obs_1.csv  obs_3.csv
example_data/output_Excel/: cat_39001_exceltest.xlsx
example_data/output_Python/: cat_12001.csv  cat_33035.csv  cat_39001.csv  cat_39001_exceltest.csv  cat_44008_exceltest.csv
example_data/output_R/: cat_33035.csv  cat_39001.csv  cat_44008.csv
forecast/: forecast_to_json.py  forecastcalc.py
other/: hydrosos_forecast_status_to_json.py  merge_hydrobasins.py  outlastnc_proc.py  reformatESP.py
pipeline_whos_plata_pilot/: .gitignore  README.md
status/: status_to_json.py  statuscalc.R  statuscalc.py
tests/: test_pointStatusCalc.py
whos_client/: .gitignore  README.md  get_test.ipynb  get_test.sh  om_ogc_timeseries_client.py  pyproject.toml  regularize.py  requirements.txt
whos_client/data/: ina_timeseries.csv
whos_client/sample_data/: daily_discharge.csv
whos_client/sample_data/raw/: discharge.csv
whos_client/sample_data/regularized/: discharge.csv
whos_client/src/om_api_client/: __init__.py  om_api_client.py
(+1083 files in other folders)
